--- a/detail.html
+++ b/detail.html
@@ -96,7 +96,7 @@
                         <!-- 登录功能 -->
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link" href="login.html">
+                                <a class="nav-link active" href="login.html">
                                     <i class="bi bi-person me-1"></i>登录
                                 </a>
                             </li>
