--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="list.html?sort=latest">
+                        <a class="nav-link" href="latest.html">
                             <i class="bi bi-clock-history me-2"></i><span>最新更新</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="list.html?sort=trending">
+                        <a class="nav-link" href="popular.html">
                             <i class="bi bi-fire me-2"></i><span>今日爆火</span>
                         </a>
                     </li>
